[package]
name = "unwinder"
version = "0.1.1"
edition = "2021"

[profile.dev]
debug-assertions = false

[profile.release]
debug-assertions = false # required to avoid misaligned pointer dereference panics
strip = true  

[features]
Experimental = ["lazy_static"]

[dependencies]
dinvoke_rs = "0.1.6"
bitreader = "0.3.8"
nanorand = "0.7.0"
winapi = "0.3.9"
litcrypt2 = "0.1.2"
lazy_static = {version = "1.4.0", optional = true}

[build-dependencies]
cc = "1.0.83"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Wdk_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
]